--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Default template for PDM package"
 authors = [
     {name = "elisa", email = "elisa.darthenay@epfedu.fr"},
 ]
-dependencies = ["jupyter>=1.1.1", "pandas>=2.3.0", "numpy>=2.2.6", "matplotlib>=3.10.3", "seaborn>=0.13.2", "scikit-learn>=1.6.1", "lightgbm>=4.6.0", "xgboost>=3.0.2", "imbalanced-learn>=0.13.0"]
+dependencies = ["jupyter>=1.1.1", "pandas>=2.3.0", "numpy>=2.2.6", "matplotlib>=3.10.3", "seaborn>=0.13.2", "scikit-learn>=1.6.1", "lightgbm>=4.6.0", "xgboost>=3.0.2", "imbalanced-learn>=0.13.0", "catboost>=1.2.8"]
 requires-python = "==3.13.*"
 readme = "README.md"
 license = {text = "MIT"}
